<resources>
    <string name="app_name">Progress Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_20_hours">20_hours</string>
    <string name="lifetime">Lifetime</string>
    <string name="_1000_hours">1000 hours</string>
    <string name="_500_hours">500 hours</string>
    <string name="_100_hours">100 hours</string>
    <string name="_50_hours">50 hours</string>
    <string name="pursuit_time_ask">How long should it take to master?</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="create_new_tracker">Create New Tracker</string>
    <string name="edit_name">Edit Name:</string>
    <string name="guitar_practice">Guitar Practice</string>
    <string name="update">Update</string>
    <string name="remove_this_tracker">Remove this tracker</string>
    <string name="_15_minutes">- 15 minutes</string>
    <string name="_1_hour">- 1 hour</string>
    <string name="other">Other</string>
    <string name="other_colon">Other:</string>
    <string name="start_timer">Start Timer</string>
    <string name="plus_15_minutes">+ 15 minutes</string>
    <string name="plus_1_hour">+ 1 hour</string>
    <string name="plus_other">+ Other</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="add">Add</string>
    <string name="end_timer">End Timer</string>
    <string name="title_activity_add_tracker">Add a New Tracker</string>
    <string name="title_activity_add_target">Add a New Target</string>
    <string name="repeating_target">Repeating Target?</string>
    <string name="create_new_target">Create New Target</string>
    <string name="timeColon">Time:</string>
    <string name="time">time</string>


    <string name="every">Every:</string>

    <string name="count_to_complete"> %1$d to complete.</string>

    <string name="edit_xxx_to_complete">Edit %1$s to complete:</string>
    <string name="string_to_colon">%1$s to:</string>
    <string name="to_complete">To Complete</string>

    <string name="add_1_count">+ 1 %1$s</string>
    <string name="add_5_count">+ 5 %1$s</string>
    <string name="more">More…</string>

    <string name="does_not_matter_base_level">1000</string>
    <string name="does_not_matter">Doesn\'t Matter</string>
    <string name="Custom">Custom</string>
    <string-array name="tracker_count_strings">
        <item>"Custom"</item>
        <item>"20 "</item>
        <item>"50 "</item>
        <item>"100 "</item>
        <item>"500 "</item>
        <item>"1,000 "</item>
        <item>"Lifetime (10,000) "</item>
        <item>"Doesn\'t Matter"</item>
    </string-array>

    <integer-array name="tracker_count_ints">
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>10000</item>
        <item>0</item>
    </integer-array>


    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>

    <string name="day_colon">Day:</string>
    <string name="week_colon">Week:</string>
    <string name="month_colon">Month:</string>

    <string-array name="target_periods">
        <item>"Day"</item>
        <item>"Week</item>
        <item>"Month"</item>
        <item>"Year"</item>
    </string-array>

    <string-array name="ordinal_dates">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>

    <string name="calendar_saved_target_1">calendar_saved_target_1</string>
    <string name="calendar_saved_target_2">calendar_saved_target_2</string>
    <string name="calendar_saved_target_3">calendar_saved_target_3</string>


    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="target">target:</string>
    <string name="set">Set</string>
    <string name="must_enter_a_time">You must enter a time!</string>
    <string name="must_enter_a_number">You must enter a number!</string>
    <string name="name_cannot_be_blank">Name must not be blank!</string>
    <string name="label_cannot_be_blank">Label must not be blank!</string>
    <string name="custom_time_greater_than_0">Custom time must be greater than 0!</string>
    <string name="edit_counter_label_colon">Edit Counter Label:</string>
    <string name="paintings">paintings</string>
    <string name="level_icon">level Icon</string>
    <string name="progress_bar">progress bar</string>
    <string name="ellipsis">…\n </string>
    <string name="save_changes">Save Changes</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="subtract">Subtract</string>
    <string name="custom_colon">Custom:</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="x_minutes">%1$d minutes</string>
    <string name="x_hours">%1$d hours</string>
    <string name="plus_x_minutes">+ %1$d minutes</string>
    <string name="plus_x_hours">+ %1$d hours</string>
    <string name="minus_x_minutes">- %1$d minutes</string>
    <string name="minus_x_hours">- %1$d hours</string>
    <string name="x_ys">%1$d %2$s</string>
    <string name="plus_x_ys">+ %1$d %2$s</string>
    <string name="archive_tracker">Archive Tracker</string>
    <string name="archive_tracker_desc">Hide this tracker from the trackers screen and add to archived trackers?</string>
    <string name="unarchive_tracker">Unarchive Tracker</string>
    <string name="unarchive_tracker_desc">Unarchive this tracker and add it back to the trackers screen?</string>
    <string name="delete_tracker">Delete Tracker</string>
    <string name="delete_tracker_desc">Permanently delete this tracker?</string>
    <string name="Select_Progress_Rate">Select Progress Rate</string>
    <string name="difficulty_selector_desc">How long should it take to level up this tracker?</string>
    <string name="plus_symbol">+</string>
    <string name="drag_and_drop_button">drag and drop button</string>

    <string name="s_thousand_short">%1$sk</string>
    <string name="s_million_short">%1$sm</string>
    <string name="max_level_icon">max_level_icon</string>
    <string name="tracker_icon">tracker_icon</string>
    <string name="tracker_next_level_icon">tracker next level icon</string>
    <string name="yes_or_no_icon">Yes or No icon</string>
    <string name="this_needs_doing">this needs doing</string>

</resources>
