<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fraserbrooks.progresstracker.AddTrackerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_item_background">

        <LinearLayout
            android:id="@+id/add_dabble_name_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            android:padding="16dp"
            android:layout_marginTop="30dp">
            <EditText
                android:id="@+id/add_tracker_name_etv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/enter_a_name"
                android:textSize="18sp"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_dabble_difficulty_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/add_dabble_name_linear_layout"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:textSize="16sp"
                android:text="@string/pursuit_time_ask"
                app:layout_constraintTop_toBottomOf="@id/name_etv_layout"
                app:layout_constraintStart_toStartOf="@id/time_buttons"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="14dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/gem_black"
                android:scaleType="fitStart"/>
        </LinearLayout>

        <com.fraserbrooks.progresstracker.RadioButtonTableLayout
            android:id="@+id/radio_button_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            app:layout_constraintTop_toBottomOf="@+id/add_dabble_difficulty_tv">
            <TableRow>
                <RadioButton
                    android:id="@+id/rad1_20"
                    android:text="@string/_20_hours"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:background="@drawable/button_background"/>
                <RadioButton
                    android:id="@+id/rad2_50"
                    android:text="@string/_50_hours"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:background="@drawable/button_background"/>
                <RadioButton
                    android:id="@+id/rad3_100"
                    android:text="@string/_100_hours"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:background="@drawable/button_background"/>
            </TableRow>
            <TableRow>
                <RadioButton
                    android:id="@+id/rad4_500"
                    android:text="@string/_500_hours"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:background="@drawable/button_background"/>
                <RadioButton
                    android:id="@+id/rad5_1000"
                    android:text="@string/_1000_hours"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:background="@drawable/button_background"/>
                <RadioButton
                    android:id="@+id/rad6_lifetime"
                    android:text="@string/lifetime"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:background="@drawable/button_background"/>
            </TableRow>
            <TableRow>
                <RadioButton
                    android:id="@+id/rad7_custom"
                    android:text="@string/custom"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:background="@drawable/button_background"/>
                <RadioButton
                    android:id="@+id/rad8_none"
                    android:text="@string/does_not_matter"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:button="@null"
                    android:background="@drawable/button_background"/>
            </TableRow>
        </com.fraserbrooks.progresstracker.RadioButtonTableLayout>

        <LinearLayout
            android:id="@+id/custom_time_etv_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/radio_button_table"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:text="@string/custom___"
                android:textAlignment="textEnd"
                android:gravity="end" />
            <EditText
                android:id="@+id/add_custom_hour_etv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hours"
                android:inputType="numberPassword"
                android:nextFocusDown="@id/sub_minutes_etv"
                android:imeOptions="actionDone"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/custom_time_etv_layout"
            android:text="@string/create_new_tracker"
            android:onClick="addButtonClicked"
            android:layout_margin="16dp"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>

